# PocketRAG

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml
docs/: API.md  Color.txt  Communication.md  Dependencies.md  InstallElectron.md  LLMConv.md  ONNXModel.md  Split.md  VectorTable.md
electron/: index.html  main.js
electron/main/: getInstallationId.js  main.js  preload.js
electron/public/: defaultSettings.json  uninstaller.nsh
electron/renderer/: index.css  index.html  index.js
electron/renderer/components/MainWindowComponents/: MainWindow.js  MainWindowContents.css  MainWindowContents.jsx  TabsBar.css  TabsBar.jsx  TextEditor.css  TextEditor.jsx
electron/renderer/components/MainWindowComponents/ChunkInfo/: ChunkInfo.css  ChunkInfo.jsx
electron/renderer/components/MainWindowComponents/Conversation/: Conversation.css  Conversation.jsx  ConversationTopicContainer.css  ConversationTopicContainer.jsx  ModelSelectionContainer.css
electron/renderer/components/MainWindowComponents/Conversation/ConversationTopicContainer/: ConversationTopicContainer.jsx
electron/renderer/components/MainWindowComponents/Conversation/ModelSelectionContainer/: ModelSelectionContainer.jsx
electron/renderer/components/MainWindowComponents/Doclist/: Doclist.css  Doclist.jsx
electron/renderer/components/MainWindowComponents/LeftBar/: LeftBar.css  LeftBar.jsx
electron/renderer/components/MainWindowComponents/Search/: Search.css  Search.jsx
electron/renderer/components/MainWindowComponents/TabsBar/: TabsBar.css  TabsBar.jsx
electron/renderer/components/MainWindowComponents/TextEditor/: TextEditor.css  TextEditor.jsx
electron/renderer/components/MainWindowComponents/Welcome/: Welcome.jsx
electron/renderer/components/SettingsWindowComponents/: SettingsWindow.js  SettingsWindowContainer.css  SettingsWindowContainer.jsx  shared-styles.css
electron/renderer/components/SettingsWindowComponents/About/: About.css  About.jsx
electron/renderer/components/SettingsWindowComponents/AddConfigModal/: AddConfigModal.css  AddConfigModal.jsx
electron/renderer/components/SettingsWindowComponents/ConversationModelModal/: ConversationModelModal.css  ConversationModelModal.jsx
electron/renderer/components/SettingsWindowComponents/ConversationSettings/: ConversationSettings.css  ConversationSettings.jsx
electron/renderer/components/SettingsWindowComponents/CustomTable/: CustomTable.css  CustomTable.jsx
electron/renderer/components/SettingsWindowComponents/LeftBar/: LeftBar.css  LeftBar.jsx
electron/renderer/components/SettingsWindowComponents/LocalModelManagement/: LocalModelManagement-new.css  LocalModelManagement.css  LocalModelManagement.jsx
electron/renderer/components/SettingsWindowComponents/LocalModelModal/: LocalModelModal.css  LocalModelModal.jsx
electron/renderer/components/SettingsWindowComponents/Page/: Page.css  Page.jsx
electron/renderer/components/SettingsWindowComponents/Performance/: Performance.css  Performance.jsx
electron/renderer/components/SettingsWindowComponents/RightScreen/: RightScreen.css  RightScreen.jsx
electron/renderer/components/SettingsWindowComponents/SearchSettings/: SearchSettings.css  SearchSettings.jsx
electron/renderer/components/StartWindowComponents/: RepoListWindow.js  StartWindowContainer.css  StartWindowContainer.jsx
electron/renderer/components/StartWindowComponents/Option/: Option.css  Option.jsx
electron/renderer/components/StartWindowComponents/PocketRAG/: PocketRAG.css  PocketRAG.jsx
electron/renderer/templates/Doclist/: Doclist.css  Doclist.jsx
electron/renderer/templates/ErrorBoundary/: ErrorBoundary.jsx
electron/renderer/templates/PopWindow/: PopWindow.jsx
electron/renderer/templates/Search/: Search.css  Search.jsx
electron/renderer/templates/TopBar/: TopBar.css  TopBar.jsx
electron/renderer/templates/WindowControl/: WindowControl.jsx
electron/renderer/templates/WindowControl_WithoutMax/: WindowControl_WithoutMax.css  WindowControl_WithoutMax.jsx
electron/renderer/views/MainWindow/: MainWindow.css  MainWindow.jsx
electron/src/browser/: main.js  preload.js
electron/src/main/: main.js  preload.js
electron/src/renderer/: index.html  index.js  index.jsx
electron/src/renderer/compoents/: App.jsx
electron/src/renderer/components/MainWindowComponents/: MainWindow.js  MainWindowContents.css  MainWindowContents.jsx  RepoFileTree.jsx  Tabs.jsx  TabsBar.jsx  TextEditor.jsx
electron/src/renderer/components/MainWindowComponents/LeftBar/: LeftBar.css  (+1 more)
electron/src/renderer/components/SettingsWindowComponents/: SettingsWindowContainer.css  SettingsWindowContainer.jsx
electron/src/renderer/components/StartWindowComponents/: RepoListWindow.js  StartWindowContainer.css  StartWindowContainer.jsx
electron/src/renderer/templates/Doclist/: Doclist.css  Doclist.jsx
electron/src/renderer/templates/LeftBar/: LeftBar.css
electron/src/renderer/templates/PopWindow/: PopWindow.css  PopWindow.jsx
electron/src/renderer/templates/TopBar/: TopBar.css  TopBar.jsx
electron/src/renderer/templates/TopTools/: TopTools.css
electron/src/renderer/templates/WindowControl/: WindowControl.css
electron/src/renderer/views/MainWindow/: MainWindow.css  MainWindow.jsx
electron/src/renderer/views/SettingsWindow/: SettingsWindow.jsx
electron/src/renderer/views/StartWindow/: StartWindow.css  StartWindow.jsx
kernel/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
kernel/include/: Chunker.h  DocPipe.h  KernelServer.h  LLMConv.h  ONNXModel.h  Repository.h  Session.h  Split.h  SqliteConnection.h  TextSearchTable.h  Utils.h  VectorTable.h
kernel/src/: Chunker.cpp  DocPipe.cpp  KernelServer.cpp  LLMConv.cpp  ONNXModel.cpp  Repository.cpp  Session.cpp  Split.cpp  SqliteConnection.cpp  TextSearchTable.cpp  Utils.cpp  VectorTable.cpp  VectorTable.cpp.bak  main.cpp
kernel/tests/: ONNXModel_tests.cpp  VectorTable_tests.cpp
scripts/: build.js  buildKernel.js  build_kernel.js  generateVersionFile.js  modelConvert.py  uninstaller.nsh
(+29 files in other folders)
